# CVpipeline_smp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Report.md  conda_notes.md  data_splits.txt  environment.nobuilds.yaml  export_onnx.py  model_analysis.md  pyproject.toml  train.py
configs/: config.yaml
configs/callbacks/: callbacks.yaml
configs/datamodule/: datamodule.yaml
configs/labels/: binary_broken.yaml  binary_defect.yaml  binary_fuzzy_ball.yaml  binary_weft_crack.yaml  multiclass_broken.yaml
configs/logger/: mlflow_local.yaml  mlflow_local_test.yaml
configs/loss/: dice.yaml  jaccard.yaml  tversky.yaml
configs/model/: smp.yaml  smp_unet_effnet.yaml
configs/optimizer/: adagrad.yaml  adam.yaml  adamw.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml
configs/scheduler/: cosine_annealing.yaml  cosineannealing.yaml  cosineannealing_warmrestarts.yaml  plateau.yaml
configs/trainer/: default.yaml  test.yaml
cvpipeline_smp/: __init__.py
cvpipeline_smp/config/: __init__.py  training_config.py
cvpipeline_smp/data/: datamodule.py
cvpipeline_smp/datamodule/: __init__.py  datamodule.py  transforms.py
cvpipeline_smp/lightning_module/: __init__.py  smp_train_pipeline.py  smp_train_pipeline_multiclass.py
onnx/: README.md  benchmark.txt  evaluate_model.py  load_dataset.py  make_masks.py  measure_fps.py  onnx_runtime.py  requirements.txt  venv_notes.md  verify_model.py
